feat: add pokebola effect

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,3 +9,21 @@
     <app-recent-pokemon (selectPokemon)="onSelectPokemon($event)"></app-recent-pokemon>
   </div>
 </div>
+
+<footer class="app-footer">
+  <div class="footer-content">
+    <div class="author-info">
+      <span class="author-name">Desarrollado por Uriel R. Palomares Elias</span>
+      <div class="contact-links">
+        <a href="mailto:urieleliasg&#64;gmail.com" class="contact-link email">
+          <mat-icon>email</mat-icon>
+          urieleliasg&#64;gmail.com
+        </a>
+        <a href="https://github.com/urielPalomares/mi-pokedex" target="_blank" class="contact-link github">
+          <mat-icon>code</mat-icon>
+          GitHub Repository
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
