--- a/src/app/components/pokemon-detail/pokemon-detail.html
+++ b/src/app/components/pokemon-detail/pokemon-detail.html
@@ -26,7 +26,7 @@
     </div>
     <div class="pokedex-entry spectacular-entry redesigned-entry">{{ pokemon.entry }}</div>
     <div class="detail-section abilities redesigned-abilities">
-      <div class="section-title">ABILITIES</div>
+      <div class="section-title">HABILIDADES</div>
       <div class="ability-badges spectacular-abilities">
         <span class="ability-badge" *ngFor="let ability of pokemon.abilities">
           <mat-icon class="ability-icon">star</mat-icon> {{ ability }}
@@ -36,22 +36,22 @@
     <div class="detail-section measurements spectacular-measurements redesigned-measurements">
       <div class="measurement">
         <mat-icon class="measurement-icon">height</mat-icon>
-        <div class="label">HEIGHT</div>
+        <div class="label">ALTURA</div>
         <div class="value">{{ pokemon.height }}m</div>
       </div>
       <div class="measurement">
         <mat-icon class="measurement-icon">fitness_center</mat-icon>
-        <div class="label">WEIGHT</div>
+        <div class="label">PESO</div>
         <div class="value">{{ pokemon.weight }}Kg</div>
       </div>
       <div class="measurement">
         <mat-icon class="measurement-icon">star</mat-icon>
-        <div class="label">BASE EXP</div>
+        <div class="label">EXP BASE</div>
         <div class="value">{{ pokemon.base_experience }}</div>
       </div>
     </div>
     <div class="detail-section weaknesses spectacular-weaknesses redesigned-weaknesses">
-      <div class="section-title">WEAKNESSES</div>
+      <div class="section-title">DEBILIDADES</div>
       <div class="weakness-badges">
         <span class="type-badge type-{{ type }}" *ngFor="let type of pokemon.weaknesses">
           <mat-icon class="weakness-icon">bolt</mat-icon> {{ type }}
@@ -59,19 +59,38 @@
       </div>
     </div>
     <div class="detail-section stats spectacular-stats redesigned-stats">
-      <div class="section-title">STATS</div>
+      <div class="section-title">ESTADISTICAS</div>
       <div class="stats-list redesigned-stats-list">
         <canvas #radarChart width="320" height="320"></canvas>
       </div>
     </div>
     <div class="detail-section evolution spectacular-evolution redesigned-evolution">
-      <div class="section-title">EVOLUTION</div>
-      <div class="evolution-list">
-        <div class="evolution-stage spectacular-evo" *ngFor="let evo of pokemon.evolution" (click)="selectEvolution.emit(evo)">
-          <div class="evo-img-glow">
-            <img [src]="evo.image" [alt]="evo.name" />
+      <div class="section-title evolution-title">
+        <mat-icon class="evolution-icon">trending_up</mat-icon>
+        CADENA EVOLUTIVA
+      </div>
+      <div class="evolution-chain-container">
+        <div class="evolution-chain">
+          <div class="evolution-stage spectacular-evo" *ngFor="let evo of pokemon.evolution; let i = index" (click)="selectEvolution.emit(evo)">
+            <div class="evolution-level">Nivel {{ i + 1 }}</div>
+            <div class="evo-img-container">
+              <div class="evo-img-glow">
+                <img [src]="evo.image" [alt]="evo.name" />
+              </div>
+              <div class="evo-sparkles">
+                <div class="sparkle" *ngFor="let s of [1,2,3,4,5]"></div>
+              </div>
+            </div>
+            <div class="evo-info">
+              <div class="evo-name">{{ evo.name }}</div>
+              <div class="evo-number">#{{ evo.id }}</div>
+            </div>
+            <div class="evolution-arrow" *ngIf="i < pokemon.evolution.length - 1">
+              <div class="arrow-line"></div>
+              <mat-icon class="arrow-icon">keyboard_double_arrow_right</mat-icon>
+              <div class="evolution-text">Evoluciona</div>
+            </div>
           </div>
-          <div class="evo-name">{{ evo.name }}</div>
         </div>
       </div>
     </div>
