--- a/src/app/components/pokemon-list/recent-pokemon.scss
+++ b/src/app/components/pokemon-list/recent-pokemon.scss
@@ -117,13 +117,7 @@
   margin: 0;
   text-align: left;
   
-  color: #e3350d;
-  text-shadow: 
-    0 1px 3px rgba(255, 255, 255, 0.8),
-    0 2px 6px rgba(227, 53, 13, 0.3);
-  background: linear-gradient(135deg, #e3350d 0%, #b71c1c 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #b71c1c;
   background-clip: text;
 }
 
